# lockit-cli

./: .acpx  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_STYLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  SECURITY.md  findings.md  progress.md  rustfmt.toml  task_plan.md
.cargo/: config.toml
.gemini/: GEMINI.md  config.yaml
.github/workflows/: automate.yml  chatgpt-review.yml  ci.yml  codex-review.yml  gemini-dispatch.yml  gemini-review.yml  project-automation-test.yml  project-automation.yml  release.yml  rust-ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  biometric.rs  credentials.rs  daemon.rs  main.rs  shell.rs  sync.rs  vault.rs
crates/core/: Cargo.toml
crates/core/src/: cipher.rs  error.rs  kdf.rs  lib.rs  memory.rs  vault.rs
crates/core/tests/: nonce_correctness.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  error.rs  framing.rs  lib.rs  proto.rs  server.rs  socket.rs
crates/ipc/tests/: ipc_integration.rs
crates/lockit-cli/: Cargo.toml
crates/lockit-cli/src/: interactive.rs  main.rs  output.rs  utils.rs
crates/lockit-cli/src/commands/: add.rs  coding_plan.rs  delete.rs  edit.rs  env_cmd.rs  export_cmd.rs  import_cmd.rs  init.rs  list.rs  login.rs  logout.rs  mod.rs  reset.rs  reveal.rs  run_cmd.rs  show.rs  sync_cmd.rs  whoami.rs
crates/lockit-cli/src/commands/sync_cmd/: config.rs  key.rs  mod.rs  payload.rs  state.rs  status.rs  sync_ops.rs
crates/lockit-cli/tests/: cli_workflows.rs
crates/lockit-core/: Cargo.toml
crates/lockit-core/src/: credential.rs  credential_field.rs  crypto.rs  lib.rs  migration.rs  sync.rs  vault.rs
crates/lockit-core/src/coding_plan/: chatgpt.rs  claude.rs  deepseek.rs  mimo.rs  mod.rs  qwen.rs
crates/lockit-core/src/sync/: google_drive.rs  oauth.rs
crates/lockit-core/tests/: coding_plan_tests.rs  core_v1.rs  credential_field_tests.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: backend.rs  config.rs  error.rs  factory.rs  http.rs  lib.rs  manifest.rs  state.rs  sync_crypto.rs  util.rs
crates/sync/src/auth/: login.rs  mod.rs  token.rs
crates/sync/src/backends/: git.rs  google_drive.rs  local.rs  mock.rs  mod.rs  s3.rs  webdav.rs
crates/sync/src/engine/: conflict.rs  mod.rs  sync.rs  vault_key.rs
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  VISION.md  cli-agent-research.md  cli-design.md  sync-audit-report.md  sync-design.md
docs/architecture/: system-architecture.md
docs/design/: technical-design-v0.2.md
docs/overview/: product-plan.md
docs/roadmap/: roadmap-todo.md
docs/standards/: code-acceptance.md
docs/superpowers/plans/: 2026-03-24-lockit-core.md  2026-03-25-lockit-cli.md  2026-03-25-lockit-ipc.md  2026-03-25-lockit-sdk.md  2026-03-25-lockit-sync.md  2026-05-01-lockit-cli.md
docs/superpowers/specs/: 2026-03-24-lockit-core-design.md  2026-03-26-p1-security-fixes-design.md  2026-05-01-lockit-cli-design.md
lockit-desktop/: index.html  package-lock.json  package.json
lockit-desktop/src/: main.ts  styles.css
lockit-desktop/src-tauri/: Cargo.toml  tauri.conf.json
lockit-desktop/src-tauri/src/: main.rs
lockit-mobile/: index.html  package.json  vite.config.js
lockit-mobile/src/: App.svelte
lockit-mobile/src-tauri/: Cargo.toml  tauri.conf.json
lockit-mobile/src-tauri/src/: lib.rs  main.rs
scripts/: gemini-review-daemon.js  gemini-review-daemon.sh
src/: credential.rs  main.rs  storage.rs
src/commands/: add.rs  delete.rs  export.rs  get.rs  import.rs  init.rs  list.rs  mod.rs
ui/logo/: README.md  package.json
ui/logo/src/app/: App.tsx
ui/logo/src/app/components/: LockitIcon.tsx
ui/version_1/: DESIGN.md
ui/version_1/cli_setup_light/: code.html
ui/version_1/dashboard_light/: code.html
ui/version_1/secret_details_light/: code.html
ui/version_1/vault_explorer_light/: code.html
ui/version_2/: code.html
ui/version_2/cli_setup_unified_light/: code.html
ui/version_2/dashboard_unified_light/: code.html
ui/version_2/secret_details_unified_light/: code.html
ui/version_2/vault_explorer_unified_light/: code.html
ui/version_3_lockpage/biometric_auth_refined_layout/: code.html
ui/version_3_lockpage/lockit_command/: DESIGN.md
ui/version_3_lockpage/login_auth_refined_layout/: code.html
ui/version_4/cli_setup_monolith/: code.html
ui/version_4/dashboard_monolith/: code.html
ui/version_4/monolith/: DESIGN.md
ui/version_4/secret_details_monolith/: code.html
ui/version_4/vault_monolith/: code.html
