[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/sync",
    "crates/ipc",
    "crates/sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["lockit contributors"]
repository = "https://github.com/xqicxx/lockit"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
rpassword = "7.3"
home = "0.5"

# Random number generation
rand = "0.9"

# Secret handling
secrecy = "0.8"

# BIP39 mnemonic
bip39 = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"

# Hashing
sha2 = "0.10"
hex = "0.4"

# TOML config parsing
toml = "0.8"

# JSON
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }

# CSV parsing
csv = "1.3"


# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }

# HTTP client (WebDAV backend)
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# XML parsing (WebDAV PROPFIND)
quick-xml = "0.37"

# Git sync backend
git2 = "0.19"

# Unix signal handling
nix = { version = "0.29", features = ["signal", "process"] }

# Internal crates
lockit-core = { path = "crates/core" }
lockit-sync = { path = "crates/sync" }
lockit-ipc = { path = "crates/ipc" }
lockit-sdk = { path = "crates/sdk" }

# Mobile app (dev only)
# lockit-mobile = { path = "lockit-mobile/src-tauri" }
