[package]
name = "lockit-cli"
description = "CLI tool for lockit credential manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lk"
path = "src/main.rs"

[dependencies]
lockit-core.workspace = true
lockit-ipc.workspace = true
lockit-sync.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
clap_complete.workspace = true
rpassword.workspace = true
home.workspace = true
secrecy.workspace = true
serde_json.workspace = true
toml.workspace = true
serde = { workspace = true }
rmp-serde = { workspace = true }
chrono = { workspace = true }
zeroize = "1.8"
csv = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Keychain / biometric integration (Touch ID / Face ID).
security-framework = { version = "2", features = ["OSX_10_15"] }
core-foundation = "0.10"
