[package]
name = "lockit-core"
description = "Cryptographic foundation for lockit credential manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Random number generation
rand.workspace = true

# Cryptography
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"

# Secure memory
secrecy = "0.8"
zeroize = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"

# BIP39 mnemonic (recovery phrase)
bip39.workspace = true

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"