[package]
name = "lockit-sdk"
description = "Rust SDK for lockit credential manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lockit-ipc.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
