[package]
name = "lockit-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
home = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
aes-gcm = { version = "0.10", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
