[package]
name = "lockit-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lockit-core = { path = "../../crates/lockit-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"

[workspace]
