[package]
name = "lockit-mobile"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Lockit crates (conditional compilation for mobile)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
lockit-core = { path = "../../crates/core" }
lockit-sync = { path = "../../crates/sync" }

[lib]
name = "lockit_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
